--- a/src/main/resources/com/example/testtask/Task2.fxml
+++ b/src/main/resources/com/example/testtask/Task2.fxml
@@ -8,9 +8,8 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.text.TextFlow?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.testtask.MainController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.testtask.Task2Controller">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.0" minWidth="10.0" prefWidth="95.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="10.0" prefWidth="205.0" />
@@ -21,9 +20,9 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#OnButtonBackToMenuClick" prefHeight="25.0" prefWidth="91.0" text="Back to menu" GridPane.halignment="LEFT" GridPane.valignment="TOP" />
-      <TextField GridPane.columnIndex="1" GridPane.valignment="BOTTOM" />
-      <TextField GridPane.columnIndex="1" />
+      <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#OnButtonBackToMenuClick" prefHeight="25.0" prefWidth="91.0" text="В Меню" GridPane.halignment="LEFT" GridPane.valignment="TOP" />
+      <TextField fx:id="date" GridPane.columnIndex="1" GridPane.valignment="BOTTOM" />
+      <TextField fx:id="city" GridPane.columnIndex="1" />
       <Label text="Город:" GridPane.halignment="CENTER">
          <GridPane.margin>
             <Insets left="30.0" />
@@ -41,7 +40,12 @@
       </Label>
       <Label text="Температура:" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
       <Label GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <TextFlow prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="164.13671875" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Text fx:id="temp" strokeType="OUTSIDE" strokeWidth="0.0" text="Температура" wrappingWidth="164.13671875" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Button fx:id="button" mnemonicParsing="false" onAction="#OnCityAction" text="Загрузить" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets top="20.0" />
+         </GridPane.margin>
+      </Button>
+      <Text fx:id="infoTemp" strokeType="OUTSIDE" strokeWidth="0.0" text="Описание погоды" wrappingWidth="205.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="TOP" />
    </children>
 </GridPane>
