--- a/src/main/resources/com/example/testtask/hello-view.fxml
+++ b/src/main/resources/com/example/testtask/hello-view.fxml
@@ -18,17 +18,17 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button alignment="CENTER" mnemonicParsing="false" onAction="#OnButtonTask1Click" text="Task 1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <Button alignment="CENTER" mnemonicParsing="false" onAction="#OnButtonTask1Click" text="Задача 1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
       </Button>
-      <Button alignment="CENTER" mnemonicParsing="false" onAction="#OnButtonTask2Click" text="Task 2" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <Button alignment="CENTER" mnemonicParsing="false" onAction="#OnButtonTask2Click" text="Задача 2" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
       </Button>
-      <Label alignment="CENTER" text="Tesk Task" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+      <Label alignment="CENTER" text="Тестовое задание" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
