Get url from doc.location instead of link-tag on page. Make if statements that check for empty values in temperature elements and info elements Delete get, set methods for WeatherClass remove imports for TextAlignment and TextFlow Add TestTask jar to compile programm at desktop Change fxml-file

--- a/src/main/resources/com/example/testtask/Task2.fxml
+++ b/src/main/resources/com/example/testtask/Task2.fxml
@@ -40,12 +40,12 @@
       </Label>
       <Label text="Температура:" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
       <Label GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Text fx:id="temp" strokeType="OUTSIDE" strokeWidth="0.0" text="Температура" wrappingWidth="164.13671875" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Text fx:id="temp" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="164.13671875" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Button fx:id="button" mnemonicParsing="false" onAction="#OnCityAction" text="Загрузить" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="TOP">
          <GridPane.margin>
             <Insets top="20.0" />
          </GridPane.margin>
       </Button>
-      <Text fx:id="infoTemp" strokeType="OUTSIDE" strokeWidth="0.0" text="Описание погоды" wrappingWidth="205.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+      <Text fx:id="infoTemp" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="205.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="TOP" />
    </children>
 </GridPane>
